Clarify error message on missing required configuration properties