@@ -2,12 +2,14 @@ package org.jboss.shamrock.deployment;
 
 import java.util.HashSet;
 import java.util.IdentityHashMap;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 
 import org.eclipse.microprofile.config.ConfigProvider;
 import org.jboss.builder.item.SimpleBuildItem;
+import org.jboss.shamrock.deployment.configuration.ConfigurationError;
 
 public final class ShamrockConfig extends SimpleBuildItem {
 
@@ -16,19 +18,19 @@ public final class ShamrockConfig extends SimpleBuildItem {
     private static final Map<Object, String> reverseMap = new IdentityHashMap<>();
 
     private ShamrockConfig() {
-
+        //not to be constructed
     }
 
-    public static String getString(String key, String defaultValue, boolean allowNull) {
-        String opt = ConfigProvider.getConfig().getOptionalValue(key, String.class).orElse(defaultValue);
+    public static String getString(String configKey, String defaultValue, boolean allowNull) {
+        String opt = ConfigProvider.getConfig().getOptionalValue(configKey, String.class).orElse(defaultValue);
         if (opt == null) {
             if (!allowNull) {
-                throw new IllegalStateException("Excepted config property " + key + " was not found");
+                throw requiredConfigMissing(configKey);
             }
             return null;
         }
         String retVal = new String(opt);
-        reverseMap.put(retVal, key);
+        reverseMap.put(retVal, configKey);
         return retVal;
     }
 
@@ -57,7 +59,7 @@ public final class ShamrockConfig extends SimpleBuildItem {
         if (val == null || val.isEmpty()) {
             return false;
         }
-        return Boolean.parseBoolean(val);
+        return asBoolean(val, configKey);
     }
 
     public static Boolean getBoxedBoolean(String configKey, String defaultValue, boolean allowNull) {
@@ -66,13 +68,13 @@ public final class ShamrockConfig extends SimpleBuildItem {
         Boolean result;
         if (val == null || val.isEmpty()) {
             if (!allowNull) {
-                throw new IllegalStateException("Excepted config property " + configKey + " was not found");
+                throw requiredConfigMissing(configKey);
             }
             return null;
         } else {
-            result = Boolean.parseBoolean(val);
+            result = asBoolean(val, configKey);
         }
-        result = new Boolean(result);
+        result = Boolean.valueOf(result);
         reverseMap.put(result, configKey);
         return result;
     }
@@ -83,7 +85,7 @@ public final class ShamrockConfig extends SimpleBuildItem {
         if (val == null || val.isEmpty()) {
             return 0;
         }
-        return Integer.parseInt(val);
+        return asInteger(val, configKey);
     }
 
     public static Integer getBoxedInt(String configKey, String defaultValue, boolean allowNull) {
@@ -92,14 +94,48 @@ public final class ShamrockConfig extends SimpleBuildItem {
         Integer result;
         if (val == null || val.isEmpty()) {
             if (!allowNull) {
-                throw new IllegalStateException("Excepted config property " + configKey + " was not found");
+                throw requiredConfigMissing(configKey);
             }
             return null;
         } else {
-            result = Integer.parseInt(val);
+            result = asInteger(val, configKey);
         }
-        result = new Integer(result);
+        result = Integer.valueOf(result);
         reverseMap.put(result, configKey);
         return result;
     }
+
+    private static ConfigurationError requiredConfigMissing(final String configKey) {
+        return new ConfigurationError("Required configuration property '" + configKey + "' was not defined.");
+    }
+
+    private static boolean asBoolean(final String val, final String configKey) {
+        final String cleanValue = cleanupValue(val);
+        if ("true".equals(cleanValue)) {
+            return true;
+        }
+        else if ("false".equals(cleanValue)) {
+            return false;
+        }
+        else {
+            throw new ConfigurationError("Configuration value for property '" + configKey + "' was set to '" + val + "'. " +
+                  "A boolean value is expected; set this property to either 'true' or 'false'.");
+        }
+    }
+
+    private static int asInteger(final String val, final String configKey) {
+        final String cleanValue = cleanupValue(val);
+        try {
+            return Integer.parseInt(cleanValue);
+        }
+        catch (NumberFormatException nfe) {
+            throw new ConfigurationError("Configuration value for property '" + configKey + "' was set to '" + val + "'. " +
+                  "An integer value is expected; set this property to a decimal integer.");
+        }
+    }
+
+    private static String cleanupValue(final String val) {
+        return val.trim().toLowerCase(Locale.ROOT);
+    }
+
 }
